app/chart/templates/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-1
spec:
  type: NodePort
  selector:
    version: one
  ports:
  - protocol: TCP
    port: 6550
    targetPort: 8080
